--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ navbar-links:
   CV: "cv"
   Research: "research"
   Outreach: "outreach"
-  SciArt Portfolio: "sciart"
+  SciArt: "sciart"
   Contact: "contact"
  # Resources:
   #  - Beautiful Jekyll: "https://beautifuljekyll.com"
@@ -69,7 +69,7 @@ social-network-links:
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
-#  instagram: deanat78
+  instagram: alice.pipettes
 #  spotify: yourname
 #  telephone: +14159998888
 #  steam: deanat78
